Add movie editing possibility

--- a/src/styles/helpers.css
+++ b/src/styles/helpers.css
@@ -18,6 +18,10 @@
   justify-content: start;
 }
 
+.justify-end {
+  justify-content: end;
+}
+
 .justify-space-between {
   justify-content: space-between;
 }
